tests/transpiler/x/zig/partial_application.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/partial_application.zig:9:18: error: expected 2 argument(s), found 1
/workspace/mochi/tests/transpiler/x/zig/partial_application.zig:4:1: note: function declared here
